environments/prod/deployement-green.yaml
# k8s/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-green
  namespace: blue-green-demo
  labels:
    app: web
    color: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      color: green
  template:
    metadata:
      labels:
        app: web
        color: green
    spec:
      containers:
        - name: app
          image: inestmimi123/blue-green-app:1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
