environments/prod/service.yaml
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: blue-green-demo
spec:
  selector:
    app: web
    color: blue   # blue actif au démarrage
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
